--- a/src/main/resources/assets/icbm/yuyan/de_DE.properties
+++ b/src/main/resources/assets/icbm/yuyan/de_DE.properties
@@ -9,15 +9,15 @@ potion.radiation=Strahlung
 ## Items
 item.icbm\:poisonPowder.name=Giftpulver
 item.icbm\:antidote.name=Gegengift
-item.icbm\:radarGun.name=Radar-Pistole
+item.icbm\:radarGun.name=Radarpistole
 item.icbm\:remoteDetonator.name=Fernz\u00FCnder
 item.icbm\:defuser.name=Entsch\u00E4rfer
 item.icbm\:laserDesignator.name=Laser-Zielerfasser
-item.icbm\:tracker.name=Verfolger
+item.icbm\:tracker.name=Tracker
 item.icbm\:signalDisrupter.name=Signalst\u00F6rer
 
-item.icbm\:bullet.0.name=Stanard-Geschoss
-item.icbm\:bullet.1.name=Antimatierie-Geschoss
+item.icbm\:bullet.0.name=Stanardgeschoss
+item.icbm\:bullet.1.name=Antimatieriengeschoss
 item.icbm\:rocketLauncher.name=Raketenwerfer
 
 ## ICBM Machines
@@ -36,14 +36,14 @@ icbm.machine.11.name=Mobile Startrampe
 icbm.machine.12.name=Raketen-Koordinator
 
 ## Blocks
-tile.icbm\:oreSulfer.name=Schwefel
+tile.icbm\:oreSulfur.name=Schwefel
 tile.icbm\:missileAssembler.name=Raketenassembler
 
 ## ICBM Explosives
 
 ## Block Form
 icbm.explosive.condensed.name=Verdichteter Sprengstoff
-icbm.explosive.shrapnel.name=Schrapnell-Sprengstoff
+icbm.explosive.shrapnel.name=Schrapnellsprengstoff
 icbm.explosive.incendiary.name=Brennender Sprengstoff
 icbm.explosive.debilitation.name=Entkr\u00E4ftender Sprengstoff
 icbm.explosive.chemical.name=Chemischer Sprengstoff
@@ -53,9 +53,9 @@ icbm.explosive.attractive.name=Anziehener Sprengstoff
 
 icbm.explosive.fragmentation.name=Splitternder Sprengstoff
 icbm.explosive.contagious.name=Ansteckender Sprengstoff
-icbm.explosive.sonic.name=Schall-Sprengstoff
-icbm.explosive.breaching.name=Durchschlags-Sprengstoff
-icbm.explosive.rejuvenation.name=Revitalisierungs-Sprengstoff
+icbm.explosive.sonic.name=Schallsprengstoff
+icbm.explosive.breaching.name=Durchschlagssprengstoff
+icbm.explosive.rejuvenation.name=Revitalisierungssprengstoff
 icbm.explosive.thermobaric.name=Thermobarischer Sprengstoff
 
 icbm.explosive.nuclear.name=Atomarer Sprengstoff
@@ -63,17 +63,17 @@ icbm.explosive.emp.name=EMP-Sprengstoff
 icbm.explosive.exothermic.name=Exothermer Sprengstoff
 icbm.explosive.endothermic.name=Endothermer Sprengstoff
 icbm.explosive.antiGravitational.name=Anti-Schwerkraft-Sprengstoff
-icbm.explosive.ender.name=Ender-Sprengstoff
-icbm.explosive.hypersonic.name=Hyperschall-Sprengstoff
+icbm.explosive.ender.name=Endersprengstoff
+icbm.explosive.hypersonic.name=Hyperschallsprengstoff
 
-icbm.explosive.antimatter.name=Antimaterien-Sprengstoff
-icbm.explosive.redMatter.name=Rotmaterien-Sprengstoff
+icbm.explosive.antimatter.name=Antimateriensprengstoff
+icbm.explosive.redMatter.name=Rotmateriensprengstoff
 
 icbm.explosive.sMine.name=S-Mine
 
 ## Missile Form
 icbm.missile.condensed.name=Konventionelle Rakete
-icbm.missile.shrapnel.name=Schrapnell-Rakete
+icbm.missile.shrapnel.name=Schrapnellrakete
 icbm.missile.incendiary.name=Brandrakete
 icbm.missile.debilitation.name=Entkr\u00E4ftende Rakete
 icbm.missile.chemical.name=Chemische Rakete
@@ -81,23 +81,23 @@ icbm.missile.anvil.name=Amboss-Rakete
 icbm.missile.repulsive.name=Absto\u00DFende Rakete
 icbm.missile.attractive.name=Anziehende Rakete
 
-icbm.missile.fragmentation.name=Splitter-Rakete
+icbm.missile.fragmentation.name=Splitterrakete
 icbm.missile.contagious.name=Ansteckende Rakete
-icbm.missile.sonic.name=Schall-Rakete
-icbm.missile.breaching.name=Durchschlags-Rakete
-icbm.missile.rejuvenation.name=Revitalisierungs-Rakete
+icbm.missile.sonic.name=Schallrakete
+icbm.missile.breaching.name=Durchschlagsrakete
+icbm.missile.rejuvenation.name=Revitalisierungsrakete
 icbm.missile.thermobaric.name=Thermobarische Rakete
 
 icbm.missile.nuclear.name=Atomrakete
 icbm.missile.emp.name=EMP-Rakete
-icbm.missile.exothermic.name=Exotherme-Rakete
-icbm.missile.endothermic.name=Endotherme-Rakete
+icbm.missile.exothermic.name=Exotherme Rakete
+icbm.missile.endothermic.name=Endotherme Rakete
 icbm.missile.antiGravitational.name=Anti-Schwerkraft-Rakete
-icbm.missile.ender.name=Ender-Rakete
-icbm.missile.hypersonic.name=Hyperschall-Rakete
+icbm.missile.ender.name=Enderrakete
+icbm.missile.hypersonic.name=Hyperschallrakete
 
-icbm.missile.antimatter.name=Antimaterien-Rakete
-icbm.missile.redMatter.name=Rotmaterien-Rakete
+icbm.missile.antimatter.name=Antimaterienrakete
+icbm.missile.redMatter.name=Rotmaterienrakete
 
 ## Special Missiles
 icbm.missile.missileModule.name=Raketenmodul
@@ -108,17 +108,17 @@ icbm.missile.homing.name=Verfolgungsrakete
 
 ## Grenades
 icbm.grenade.condensed.name=Konventionelle Granate
-icbm.grenade.shrapnel.name=Schrapnell-Granate
+icbm.grenade.shrapnel.name=Schrapnellgranate
 icbm.grenade.incendiary.name=Brandgranate
 icbm.grenade.debilitation.name=Entkr\u00E4ftende Granate
 icbm.grenade.chemical.name=Chemische Granate
-icbm.grenade.anvil.name=Amboss-Granate
+icbm.grenade.anvil.name=Ambossgranate
 icbm.grenade.repulsive.name=Absto\u00DFende Granate
 icbm.grenade.attractive.name=Anziehende Granate
 
 ## Explosive Minecarts
 icbm.minecart.condensed.name=Explosive Lore
-icbm.minecart.shrapnel.name=Schrapnell-Lore
+icbm.minecart.shrapnel.name=Schrapnelllore
 icbm.minecart.incendiary.name=Brandlore
 icbm.minecart.debilitation.name=Entkr\u00E4ftende Lore
 icbm.minecart.chemical.name=Chemische Lore
@@ -167,3 +167,101 @@ item.icbm\:shellCollector.name=H\u00FClsensammelupgrade
 ## Deaths
 death.attack.bullet=%1$s wurde zu einem Schweizer K\u00E4se geschossen!
 death.attack.laser=%1$s wude von Lasern vaporisiert!
+
+## Chat messages
+message.tracker.nowtrack=Nun Verfolgend:
+message.tracker.nopower=Tracker hat nicht genügend Energie!
+message.defuser.nopower=Entschärfer hat nicht genügend Energie!
+
+message.designator.callTime=Rufe Luftschlag in:
+message.designator.blast=Luftschlag kommt!
+message.designator.setFreq=Laser-Zielerfasser-Frequenz eingestellt:
+message.designator.failFreq=Frequenz muss größer als null sein.
+message.designator.callBlast=Rufe Luftschlag zu erfasster Position!
+message.designator.nopower=Laser-Zielerfasser hat nicht genügend Energie!
+message.designator.noFreq=Laser-Zielerfasser hat keine Frequenz eingestellt!
+
+message.radarGun.scanned=Koordinaten gescannt: X:%x, Y:%y, Z:%z - Entfernung: %d
+message.radarGun.nopower=Radarpistole hat nicht genügend Energie!
+message.radarGun.transfer=Koordinateninformation übertragen!
+message.radarGun.noCoords=Du musst eine Koordinate scannen!
+message.launcher.protected=Region wird geschützt.
+message.detonator.locked=Fernzünder gebunden an: X:%x, Y:%y, Z:%z
+message.detonator.nopower=Fernzünder hat nicht genügend Energie!
+message.radar.redstone=Radar-Redstone-Emission auf allen Seiten:
+
+## GUI stuff
+gui.misc.nopower=Nicht genügend Energie!
+gui.misc.idle=Bereit
+gui.misc.freq=Frequenz:
+gui.misc.XCoord=X-Koord:
+gui.misc.YCoord=Y-Koord:
+gui.misc.ZCoord=Z-Koord:
+gui.misc.x=X:
+gui.misc.y=Y:
+gui.misc.z=Z:
+gui.misc.status=Status:
+gui.misc.voltage=Spannung:
+
+gui.tracker.freq=Frequenz
+gui.detector.name=Umgebungs-Scanner
+gui.detector.all=Alles
+gui.detector.players=Spieler
+gui.detector.mobs=Lebendes
+gui.detector.range=Erkennungsradius
+gui.detector.min=Min
+gui.detector.max=Max
+gui.detector.exclude=Ausschließen
+gui.detector.include=Einschließen
+gui.detector.target=Ziel:
+gui.detector.on=An
+gui.detector.status=Status:
+
+gui.empTower.name=EMP-Turm
+gui.empTower.missiles=Raketen
+gui.empTower.elec=Energie
+gui.empTower.both=Beides
+gui.empTower.radius=EMP-Radius: %p Blöcke
+gui.empTower.effect=EMP-Effekt:
+gui.empTower.effectDebilitate=Elektronik schwächen
+gui.empTower.effectDisrupt=Raketen stören
+gui.empTower.effectDeplete=Energie erschöpfen
+gui.empTower.mode=Modus:
+gui.empTower.ready=Bereit zum Feuern!
+
+gui.launcherBase.place=Platziere Rakete
+gui.launcherScreen.name=Abschuss-Steuerpult
+gui.launcherScreen.detHeight=Detonationshöhe:
+gui.launcherScreen.lockHeight=Feste Höhe:
+gui.launcherScreen.target=Raketenziel
+gui.launcherScreen.inaccuracy=Ungenauigkeit: %p Blöcke
+
+gui.coordinator.sim=Pfadsimulator
+gui.coordinator.from=Von:
+gui.coordinator.to=Bis:
+gui.coordinator.displace=Abstand: %p Meter
+gui.coordinator.arc=Weg: %p Meter
+gui.coordinator.time=Zeit: %p Sekunden
+gui.coordinator.direction=Richtung:
+gui.coordinator.wip=Mehr Funktionen werden komment!
+
+gui.radar.coords=Koordinaten:
+gui.radar.zoneSafe=Sicherheitszone:
+gui.radar.zoneAlarm=Alarmzone:
+gui.radar.on=Radar An!
+gui.radar.nopower=Keine Energie!
+
+gui.terminal.name=Terminal
+gui.platform.ammo=Munition
+gui.platform.upgrades=Upgrades
+gui.platform.joules=von %j
+gui.platform.access=Nutzerzugriff
+
+## Tooltips
+info.misc.freq=Frequenz:
+info.tracker.tracking=Verfolgend:
+info.designator.noFreq=Frequenz: Nicht gesetzt
+info.radarGun.savedCoords=Gespeicherte Koordinaten:
+info.radarGun.meters=Meter
+info.detonator.linked=Verbundener Sprengsatz:
+info.detonator.noLink=Kein verbundener Sprengsatz
