--- a/src/main/resources/assets/icbm/yuyan/de_DE.properties
+++ b/src/main/resources/assets/icbm/yuyan/de_DE.properties
@@ -170,28 +170,28 @@ death.attack.laser=%1$s wude von Lasern vaporisiert!
 
 ## Chat messages
 message.tracker.nowtrack=Nun Verfolgend:
-message.tracker.nopower=Tracker hat nicht genügend Energie!
-message.defuser.nopower=Entschärfer hat nicht genügend Energie!
+message.tracker.nopower=Tracker hat nicht gen\u00FCgend Energie!
+message.defuser.nopower=Entsch\u00E4rfer hat nicht gen\u00FCgend Energie!
 
 message.designator.callTime=Rufe Luftschlag in:
 message.designator.blast=Luftschlag kommt!
 message.designator.setFreq=Laser-Zielerfasser-Frequenz eingestellt:
-message.designator.failFreq=Frequenz muss größer als null sein.
+message.designator.failFreq=Frequenz muss gr\u00F6\u00DFer als null sein.
 message.designator.callBlast=Rufe Luftschlag zu erfasster Position!
-message.designator.nopower=Laser-Zielerfasser hat nicht genügend Energie!
+message.designator.nopower=Laser-Zielerfasser hat nicht gen\u00FCgend Energie!
 message.designator.noFreq=Laser-Zielerfasser hat keine Frequenz eingestellt!
 
 message.radarGun.scanned=Koordinaten gescannt: X:%x, Y:%y, Z:%z - Entfernung: %d
-message.radarGun.nopower=Radarpistole hat nicht genügend Energie!
-message.radarGun.transfer=Koordinateninformation übertragen!
+message.radarGun.nopower=Radarpistole hat nicht gen\u00FCgend Energie!
+message.radarGun.transfer=Koordinateninformation \u00FCbertragen!
 message.radarGun.noCoords=Du musst eine Koordinate scannen!
-message.launcher.protected=Region wird geschützt.
-message.detonator.locked=Fernzünder gebunden an: X:%x, Y:%y, Z:%z
-message.detonator.nopower=Fernzünder hat nicht genügend Energie!
+message.launcher.protected=Region wird gesch\u00FCtzt.
+message.detonator.locked=Fernz\u00FCnder gebunden an: X:%x, Y:%y, Z:%z
+message.detonator.nopower=Fernz\u00FCnder hat nicht gen\u00FCgend Energie!
 message.radar.redstone=Radar-Redstone-Emission auf allen Seiten:
 
 ## GUI stuff
-gui.misc.nopower=Nicht genügend Energie!
+gui.misc.nopower=Nicht gen\u00FCgend Energie!
 gui.misc.idle=Bereit
 gui.misc.freq=Frequenz:
 gui.misc.XCoord=X-Koord:
@@ -211,8 +211,8 @@ gui.detector.mobs=Lebendes
 gui.detector.range=Erkennungsradius
 gui.detector.min=Min
 gui.detector.max=Max
-gui.detector.exclude=Ausschließen
-gui.detector.include=Einschließen
+gui.detector.exclude=Ausschlie\u00DFen
+gui.detector.include=Einschlie\u00DFen
 gui.detector.target=Ziel:
 gui.detector.on=An
 gui.detector.status=Status:
@@ -221,20 +221,20 @@ gui.empTower.name=EMP-Turm
 gui.empTower.missiles=Raketen
 gui.empTower.elec=Energie
 gui.empTower.both=Beides
-gui.empTower.radius=EMP-Radius: %p Blöcke
+gui.empTower.radius=EMP-Radius: %p Bl\u00F6cke
 gui.empTower.effect=EMP-Effekt:
-gui.empTower.effectDebilitate=Elektronik schwächen
-gui.empTower.effectDisrupt=Raketen stören
-gui.empTower.effectDeplete=Energie erschöpfen
+gui.empTower.effectDebilitate=Elektronik schw\u00E4chen
+gui.empTower.effectDisrupt=Raketen st\u00F6ren
+gui.empTower.effectDeplete=Energie ersch\u00F6pfen
 gui.empTower.mode=Modus:
 gui.empTower.ready=Bereit zum Feuern!
 
 gui.launcherBase.place=Platziere Rakete
 gui.launcherScreen.name=Abschuss-Steuerpult
-gui.launcherScreen.detHeight=Detonationshöhe:
-gui.launcherScreen.lockHeight=Feste Höhe:
+gui.launcherScreen.detHeight=Detonationsh\u00F6he:
+gui.launcherScreen.lockHeight=Feste H\u00F6he:
 gui.launcherScreen.target=Raketenziel
-gui.launcherScreen.inaccuracy=Ungenauigkeit: %p Blöcke
+gui.launcherScreen.inaccuracy=Ungenauigkeit: %p Bl\u00F6cke
 
 gui.coordinator.sim=Pfadsimulator
 gui.coordinator.from=Von:
