--- a/src/main/resources/assets/icbm/yuyan/de_DE.properties
+++ b/src/main/resources/assets/icbm/yuyan/de_DE.properties
@@ -7,6 +7,7 @@ potion.frostBite=Erfrierung
 potion.radiation=Strahlung
 
 ## Items
+item.icbm\:sulfur.name=Schwefel
 item.icbm\:poisonPowder.name=Giftpulver
 item.icbm\:antidote.name=Gegengift
 item.icbm\:radarGun.name=Radarpistole
@@ -16,8 +17,6 @@ item.icbm\:laserDesignator.name=Laser-Zielerfasser
 item.icbm\:tracker.name=Tracker
 item.icbm\:signalDisrupter.name=Signalst\u00F6rer
 
-item.icbm\:bullet.0.name=Stanardgeschoss
-item.icbm\:bullet.1.name=Antimatieriengeschoss
 item.icbm\:rocketLauncher.name=Raketenwerfer
 
 ## ICBM Machines
@@ -32,7 +31,7 @@ icbm.machine.7.name=Startplatforms-St\u00FCtzgestell Stufe 2
 icbm.machine.8.name=Startplatforms-St\u00FCtzgestell Stufe 3
 icbm.machine.9.name=Radarstation
 icbm.machine.10.name=EMP-Turm
-icbm.machine.11.name=Mobile Startrampe
+icbm.machine.11.name=Mobile Abschussrampe
 icbm.machine.12.name=Raketen-Koordinator
 
 ## Blocks
@@ -135,13 +134,13 @@ icbm.minecart.thermobaric.name=Thermobarische Lore
 
 ## ICBM Misc Blocks
 tile.icbm\:oreSulfur.name=Schwefelerz
-tile.icbm\:concrete.name=Beton
-tile.icbm\:concreteCompact.name=Kompakter Beton
-tile.icbm\:concreteReinforced.name=Verst\u00E4rkter Beton
+tile.icbm\:concrete.0.name=Beton
+tile.icbm\:concrete.1.name=Kompakter Beton
+tile.icbm\:concrete.2.name=Verst\u00E4rkter Beton
 tile.icbm\:glassReinforced.name=Verst\u00E4rktes Glas
 tile.icbm\:glassPressurePlate.name=Glasdruckplatte
 tile.icbm\:glassButton.name=Glasknopf
-tile.icbm\:camouflage.name=Verh\u00FCllung
+tile.icbm\:camouflage.name=Tarnmaterial
 tile.icbm\:proximityDetector.name=Umgebungs-Scanner
 tile.icbm\:spikes.0.name=Stacheln
 tile.icbm\:spikes.1.name=Giftstacheln
@@ -229,13 +228,27 @@ gui.empTower.effectDeplete=Energie ersch\u00F6pfen
 gui.empTower.mode=Modus:
 gui.empTower.ready=Bereit zum Feuern!
 
+gui.launcherBase.name=Abschussplattform
 gui.launcherBase.place=Platziere Rakete
 gui.launcherScreen.name=Abschuss-Steuerpult
 gui.launcherScreen.detHeight=Detonationsh\u00F6he:
 gui.launcherScreen.lockHeight=Feste H\u00F6he:
 gui.launcherScreen.target=Raketenziel
 gui.launcherScreen.inaccuracy=Ungenauigkeit: %p Bl\u00F6cke
+gui.launcherScreen.statusMissing=Nicht verbunden!
+gui.launcherScreen.statusNoPower=Zu wenig Energie!
+gui.launcherScreen.statusEmpty=Raketensilo ist leer!
+gui.launcherScreen.statusInvalid=Ziel ist ung\u00FCltig!
+gui.launcherScreen.statusClose=Ziel zu nah!
+gui.launcherScreen.statusFar=Ziel zu weit entfernt!
+gui.launcherScreen.statusReady=Bereit zum Start!
+gui.launcherCruise.name=Mobile Rampe
+gui.launcherCruise.statusNoPower=Keine Energie!
+gui.launcherCruise.statusEmpty=Silo Empty!
+gui.launcherCruise.statusInvalid=Ziel ung\u00FCltig!
+gui.launcherCruise.statusReady=Bereit!
 
+gui.coordinator.name=Raketen-Koordinator
 gui.coordinator.sim=Pfadsimulator
 gui.coordinator.from=Von:
 gui.coordinator.to=Bis:
@@ -243,8 +256,9 @@ gui.coordinator.displace=Abstand: %p Meter
 gui.coordinator.arc=Weg: %p Meter
 gui.coordinator.time=Zeit: %p Sekunden
 gui.coordinator.direction=Richtung:
-gui.coordinator.wip=Mehr Funktionen werden komment!
+gui.coordinator.wip=Mehr Funktionen kommen!
 
+gui.assembler.name=Raketentisch
 gui.radar.coords=Koordinaten:
 gui.radar.zoneSafe=Sicherheitszone:
 gui.radar.zoneAlarm=Alarmzone:
@@ -265,3 +279,7 @@ info.radarGun.savedCoords=Gespeicherte Koordinaten:
 info.radarGun.meters=Meter
 info.detonator.linked=Verbundener Sprengsatz:
 info.detonator.noLink=Kein verbundener Sprengsatz
+
+info.upgrade.range=Erh\u00F6ht die Zielreichweite des Gesch\u00Fctzturms.
+info.upgrade.collect=Erlaubt dem Gesch\u00FCtzturm, ausgeworfene H\u00FClsen wieder aufzusammeln.
+info.upgrade.sentry=An upgrade for a sentry gun
