--- a/src/main/resources/assets/icbm/yuyan/en_US.properties
+++ b/src/main/resources/assets/icbm/yuyan/en_US.properties
@@ -7,6 +7,7 @@ potion.frostBite=Frost Bite
 potion.radiation=Radiation
 
 ## Items
+item.icbm\:sulfur.name=Sulfur
 item.icbm\:poisonPowder.name=Poison Powder
 item.icbm\:antidote.name=Antidote
 item.icbm\:radarGun.name=Radar Gun
@@ -16,8 +17,6 @@ item.icbm\:laserDesignator.name=Laser Designator
 item.icbm\:tracker.name=Tracker
 item.icbm\:signalDisrupter.name=Signal Disrupter
 
-item.icbm\:bullet.0.name=Conventional Bullet
-item.icbm\:bullet.1.name=Antimatter Bullet
 item.icbm\:rocketLauncher.name=Rocket Launcher
 
 ## ICBM Machines
@@ -135,9 +134,9 @@ icbm.minecart.thermobaric.name=Thermobaric Minecart
 
 ## ICBM Misc Blocks
 tile.icbm\:oreSulfur.name=Sulfur Ore
-tile.icbm\:concrete.name=Concrete
-tile.icbm\:concreteCompact.name=Compact Concrete
-tile.icbm\:concreteReinforced.name=Reinforced Concrete
+tile.icbm\:concrete.0.name=Concrete
+tile.icbm\:concrete.1.name=Compact Concrete
+tile.icbm\:concrete.2.name=Reinforced Concrete
 tile.icbm\:glassReinforced.name=Reinforced Glass
 tile.icbm\:glassPressurePlate.name=Glass Pressure Plate
 tile.icbm\:glassButton.name=Glass Button
@@ -229,13 +228,27 @@ gui.empTower.effectDeplete=Deplete Electricity
 gui.empTower.mode=Mode:
 gui.empTower.ready=Ready to blast!
 
+gui.launcherBase.name=Launcher Platform
 gui.launcherBase.place=Place Missile
 gui.launcherScreen.name=Launcher Control Panel
 gui.launcherScreen.detHeight=Detonation Height:
 gui.launcherScreen.lockHeight=Lock Height:
 gui.launcherScreen.target=Missile Target
 gui.launcherScreen.inaccuracy=Inaccuracy: %p blocks
+gui.launcherScreen.statusMissing=Not connected!
+gui.launcherScreen.statusNoPower=Insufficient electricity!
+gui.launcherScreen.statusEmpty=Missile silo is empty!
+gui.launcherScreen.statusInvalid=Target is invalid!
+gui.launcherScreen.statusClose=Target too close!
+gui.launcherScreen.statusFar=Target too far!
+gui.launcherScreen.statusReady=Ready to launch!
+gui.launcherCruise.name=Cruise Launcher
+gui.launcherCruise.statusNoPower=No Power!
+gui.launcherCruise.statusEmpty=Silo Empty!
+gui.launcherCruise.statusInvalid=Invalid Target!
+gui.launcherCruise.statusReady=Ready!
 
+gui.coordinator.name=Missile Coordinator
 gui.coordinator.sim=Path Simulator
 gui.coordinator.from=From:
 gui.coordinator.to=To:
@@ -245,6 +258,7 @@ gui.coordinator.time=Time: %p Seconds
 gui.coordinator.direction=Direction:
 gui.coordinator.wip=More features coming soon!
 
+gui.assembler.name=Missile Table
 gui.radar.coords=Coordinates:
 gui.radar.zoneSafe=Safe Zone:
 gui.radar.zoneAlarm=Alarm Zone:
@@ -265,3 +279,7 @@ info.radarGun.savedCoords=Saved Coordinates:
 info.radarGun.meters=Meters
 info.detonator.linked=Linked Explosive:
 info.detonator.noLink=No Linked Explosive
+
+info.upgrade.range=Upgrades the targeting range of the sentry gun.
+info.upgrade.collect=Allows the sentry to collect ejected shell casings.
+info.upgrade.sentry=An upgrade for a sentry gun
