Fixed mega derp in de_DE

--- a/src/main/resources/assets/icbm/yuyan/de_DE.properties
+++ b/src/main/resources/assets/icbm/yuyan/de_DE.properties
@@ -244,7 +244,7 @@ gui.launcherScreen.statusFar=Ziel zu weit entfernt!
 gui.launcherScreen.statusReady=Bereit zum Start!
 gui.launcherCruise.name=Mobile Rampe
 gui.launcherCruise.statusNoPower=Keine Energie!
-gui.launcherCruise.statusEmpty=Silo Empty!
+gui.launcherCruise.statusEmpty=Silo leer!
 gui.launcherCruise.statusInvalid=Ziel ung\u00FCltig!
 gui.launcherCruise.statusReady=Bereit!
 
