Added ban_tracker modflag.. untested

--- a/src/main/resources/assets/icbm/languages/en_US.properties
+++ b/src/main/resources/assets/icbm/languages/en_US.properties
@@ -170,6 +170,8 @@ death.attack.laser=%1$s was vaporized by lasers!
 ## Chat messages
 message.tracker.nowtrack=Now tracking:
 message.tracker.nopower=Tracker out of electricity!
+message.tracker.banned=Tracker is banned in this area!
+
 message.defuser.nopower=Defuser out of electricity!
 
 message.designator.callTime=Calling air strike in:
