Fixed sentry names

--- a/src/main/resources/assets/icbm/languages/en_US.properties
+++ b/src/main/resources/assets/icbm/languages/en_US.properties
@@ -148,10 +148,10 @@ tile.icbm\:spikes.2.name=Flammable Spikes
 
 ## ICBM Sentry
 ## Translated by Calclavia
-tile.icbm\:turret.0.name=Gun Turret
-tile.icbm\:turret.1.name=Railgun
-tile.icbm\:turret.2.name=AA Turret
-tile.icbm\:turret.3.name=Laser Turret
+tile.icbm\:turret.gunTurret.name=Gun Turret
+tile.icbm\:turret.railgun.name=Railgun
+tile.icbm\:turret.antiAircraftTurret.name=Anti-Aircraft Turret
+tile.icbm\:turret.laserTurret.name=Laser Turret
 tile.icbm\:turretPlatform.name=Turret Platform
 
 item.icbm\:bulletShell.name=Bullet Shell
