Fixed all ICBM names and textures

--- a/src/main/resources/assets/icbm/languages/en_US.properties
+++ b/src/main/resources/assets/icbm/languages/en_US.properties
@@ -7,7 +7,7 @@ potion.frostBite=Frost Bite
 potion.radiation=Radiation
 
 ## Items
-item.icbm\:sulfur.name=Sulfur
+item.icbm\:sulfurDust.name=Sulfur
 item.icbm\:poisonPowder.name=Poison Powder
 item.icbm\:antidote.name=Antidote
 item.icbm\:radarGun.name=Radar Gun
@@ -35,7 +35,7 @@ icbm.machine.11.name=Cruise Launcher
 icbm.machine.12.name=Missile Coordinator
 
 ## Blocks
-tile.icbm\:oreSulfur.name=Sulfur
+tile.icbm\:sulfurOre.name=Sulfur
 tile.icbm\:missileAssembler.name=Missile Assembler
 
 ## ICBM Explosives
