Added fancy Tier information in missle tooltips

--- a/src/main/resources/assets/icbm/languages/de_DE.properties
+++ b/src/main/resources/assets/icbm/languages/de_DE.properties
@@ -279,6 +279,7 @@ info.radarGun.savedCoords=Gespeicherte Koordinaten:
 info.radarGun.meters=Meter
 info.detonator.linked=Verbundener Sprengsatz:
 info.detonator.noLink=Kein verbundener Sprengsatz
+info.misc.tier=Explosive Stufe
 
 info.upgrade.range=Erh\u00F6ht die Zielreichweite des Gesch\u00Fctzturms.
 info.upgrade.collect=Erlaubt dem Gesch\u00FCtzturm, ausgeworfene H\u00FClsen wieder aufzusammeln.
