--- a/src/main/resources/assets/icbm/languages/en_US.properties
+++ b/src/main/resources/assets/icbm/languages/en_US.properties
@@ -281,6 +281,7 @@ info.radarGun.savedCoords=Saved Coordinates:
 info.radarGun.meters=Meters
 info.detonator.linked=Linked Explosive:
 info.detonator.noLink=No Linked Explosive
+info.misc.tier=Explosive Tier
 
 info.upgrade.range=Upgrades the targeting range of the sentry gun.
 info.upgrade.collect=Allows the sentry to collect ejected shell casings.
