--- a/src/main/resources/assets/icbm/languages/es_ES.properties
+++ b/src/main/resources/assets/icbm/languages/es_ES.properties
@@ -131,3 +131,6 @@ tile.icbm\:proximityDetector.name=Detector de Proximidad
 tile.icbm\:spike.0.name=Pinchos
 tile.icbm\:spike.1.name=Pinchos Venenosos
 tile.icbm\:spike.2.name=Pinchos Inflamables
+
+## Tooltips
+info.misc.tier=Nivel Explosivo
