Added tooltip for rocket launcher

--- a/src/main/resources/assets/icbm/languages/en_US.properties
+++ b/src/main/resources/assets/icbm/languages/en_US.properties
@@ -282,6 +282,8 @@ info.radarGun.meters=Meters
 info.detonator.linked=Linked Explosive:
 info.detonator.noLink=No Linked Explosive
 info.misc.tier=Explosive Tier
+info.rocketlauncher.start=This rocket launcher can fire up to Tier
+info.rocketlauncher.end=rockets
 
 info.upgrade.range=Upgrades the targeting range of the sentry gun.
 info.upgrade.collect=Allows the sentry to collect ejected shell casings.
