Fixed glass being unamed

--- a/src/main/resources/assets/icbm/languages/en_US.properties
+++ b/src/main/resources/assets/icbm/languages/en_US.properties
@@ -137,7 +137,7 @@ tile.icbm\:oreSulfur.name=Sulfur Ore
 tile.icbm\:concrete.0.name=Concrete
 tile.icbm\:concrete.1.name=Compact Concrete
 tile.icbm\:concrete.2.name=Reinforced Concrete
-tile.icbm\:glassReinforced.name=Reinforced Glass
+tile.icbm\:reinforcedGlass.name=Reinforced Glass
 tile.icbm\:glassPressurePlate.name=Glass Pressure Plate
 tile.icbm\:glassButton.name=Glass Button
 tile.icbm\:camouflage.name=Camouflage
