Worked on using missile as an ammo indirectly from the rocket launcher, Created ammo system, Fixed some translations,

--- a/src/main/resources/assets/icbm/lang/en_US.lang
+++ b/src/main/resources/assets/icbm/lang/en_US.lang
@@ -3,6 +3,7 @@ itemGroup.ICBM=ICBM
 
 ## Missile
 item.icbm:missile.name=Missile
+item.icbm:missile.empty.name=Missile Module
 
 ## Launcher
 item.icbm:rocketLauncher.name=Handheld Launcher
